--- a/BlazorAppSqlite/Pages/Index.razor
+++ b/BlazorAppSqlite/Pages/Index.razor
@@ -3,22 +3,18 @@
 @using Microsoft.EntityFrameworkCore
 @implements IDisposable
 @inject DataSynchronizer DataSynchronizer
+
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
-
-@foreach(var w in storedWaves)
+@foreach (var w in storedWaves)
 {
     <p>@w.Name - @w.Country</p>
 }
-<SurveyPrompt Title="How is Blazor working for you?" />
 
 <button @onclick="SaveData">Save</button>
 <button @onclick="LoadData">Load</button>
 
-@code{
+@code {
 
     [Inject]
     internal IDbContextFactory<ClientSideDbContext> DbContextFactory { get; set; }
@@ -30,23 +26,25 @@ Welcome to your new app.
     {
         base.OnInitialized();
         context = await DataSynchronizer.GetPreparedDbContextAsync();
+
+        await LoadData();
     }
 
     private async Task SaveData()
     {
         var wave = new Wave { Name = "Bells", Country = Guid.NewGuid().ToString() };
-        context.Waves.Add(wave);
+        context!.Waves.Add(wave);
 
         await context.SaveChangesAsync();
     }
 
     private async Task LoadData()
     {
-        var waves = await context.Waves.ToListAsync();
+        var waves = await context!.Waves.ToListAsync();
 
         storedWaves = waves;
 
-        StateHasChanged();
+        await InvokeAsync(() => StateHasChanged());
     }
 
     public void Dispose()
